Fix App ghost scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App {
-    margin: var(--header-margin) 10px 10px;
+    padding: var(--header-margin) 10px 10px;
 }
 
 .App-logo {
